# Snakey_bot

./: README.md
control_system/: CMakeLists.txt  package.xml
control_system/include/control_system/: clik.h  inverse_kinematics.h  wlos_guidance.h  wlos_guidance_node.h
control_system/launch/: control_system.launch  wlos_guidance.launch
control_system/params/: control_params.yaml
control_system/src/: IK.cpp  configuration_control.cpp  inverse_kinematics.cpp  wlos_guidance.cpp  wlos_guidance_node.cpp
pkg_utils/: CMakeLists.txt  package.xml
pkg_utils/include/pkg_utils/: Pose3.h  conversions.h  dh_convention.h  eelume_definitions.h  eigen_helpers.h  helper_functions.h  jacobian.h  modules.h  point2d.h  point3d.h  snake.h  spline.h  testing_base_class.h  testing_statistics.h  track.h  trajectory.h  transformations.h
pkg_utils/msg/: Testmsg.msg
pkg_utils/params/: test_template_params.yaml
pkg_utils/src/: Pose3.cpp  eigen_helpers.cpp  helper_functions.cpp  jacobian.cpp  modules.cpp  snake.cpp  spline.cpp  test_pub.cpp  testing_statistics.cpp  track.cpp  trajectory.cpp
pkg_utils/test/: eigen_helpers_test.cpp  spline_test.cpp  test_template_bare_bones.cpp  test_template_bare_bones.test  track_test.cpp  transformations_test.cpp
planning/: CMakeLists.txt  package.xml
planning/include/planning/: csvReader.h  spline_generator.h  waypoint_provider.h
planning/launch/: spline_generator.launch  wlos_guidance.launch
planning/params/: control_params.yaml  planning_params.yaml
planning/rviz/: rviz_1.rviz
planning/src/: csvReader.cpp  ins_mock_class.cpp  mock.cpp  spline_generator.cpp  spline_generator_node.cpp  waypoint_provider.cpp  waypoint_provider_node.cpp
planning/test_data/: quarter_waypoints_large.csv  quarter_waypoints_small.csv  straight_waypoints_x.csv  straight_waypoints_xyz.csv  u_waypoints_large.csv  u_waypoints_small.csv
snake_launch/: CMakeLists.txt  package.xml
snake_launch/launch/: launch_planning_control.launch
snake_launch/params/: topics.yaml
snake_msgs/: CMakeLists.txt  package.xml
snake_msgs/msg/: JointAngles.msg  Shape.msg  Spline.msg  Trajectory.msg  Transforms.msg  Vlos.msg  Waypoints.msg
snake_state/: CMakeLists.txt  package.xml
snake_state/launch/: state.launch
snake_state/params/: snake.yaml
snake_state/src/: state_machine.cpp
snake_viz/: CMakeLists.txt  package.xml
snake_viz/include/snake_viz/: guidance_visualization.h  path_visualization.h  snake_visualization.h
snake_viz/launch/: snake_vis.launch
snake_viz/params/: snake.yaml
snake_viz/src/: guidance_visualization.cpp  path_visualization.cpp  snake_visualization.cpp
test_template/: CMakeLists.txt  package.xml
test_template/src/: pub.cpp
test_template/test/: test.cpp  test.test
