<?xml version="1.0"?>
<package format="2">
  <name>control_system</name>
  <version>0.0.0</version>
  <description>The control_system package</description>

  <maintainer email="marcusengebretsen@gmail.com">marcus</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pkg_utils</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>pkg_utils</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>pkg_utils</exec_depend>
  <exec_depend>roscpp</exec_depend>

</package>
