<?xml version="1.0"?>
<package format="2">
  <name>pkg_utils</name>
  <version>0.0.0</version>
  <description>The pkg_utils package</description>

  <maintainer email="marcusengebretsen@gmail.com">marcus</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rostest</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>Eigen3</build_depend>
	<exec_depend>roscpp</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

	<test_depend>rosunit</test_depend>

</package>
