<?xml version="1.0"?>
<package format="2">
  <name>snake_state</name>
  <version>0.0.0</version>
  <description>The snake_state package</description>

  <maintainer email="marcusengebretsen@gmail.com">marcus</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>snake_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pkg_utils</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>snake_msgs</build_export_depend>
  <build_export_depend>pkg_utils</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>snake_msgs</exec_depend>
  <exec_depend>pkg_utils</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf</exec_depend>

</package>
