<?xml version="1.0"?>
<package format="2">
  <name>snake_viz</name>
  <version>0.0.0</version>
  <description>The snake_viz package</description>

  <maintainer email="marcusengebretsen@gmail.com">marcus</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pkg_utils</build_depend>
  <build_depend>snake_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>snake_msgs</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>snake_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

</package>
